--- a/src/Frontend/src/styles.css
+++ b/src/Frontend/src/styles.css
@@ -83,3 +83,24 @@ a:hover {
 	border-radius: 50%;
 	box-shadow: 2px 2px 2px rgba(0,0,0,0.2);
 }
+
+.card-list-small {
+	display: flex;
+	flex-direction: column;
+	list-style: none;
+	padding: 0;
+}
+
+.ship-card-small {
+	box-shadow: 2px 4px 4px rgba(0,0,0,0.1);
+	padding: 10px;
+	position: relative;
+	margin-bottom: 20px;
+	background-color: #fff;
+}
+
+.ship-card-small > img {
+	width: 48px;
+	margin-right: 20px;
+	float: left;
+}
