--- a/src/Frontend/src/app/components/ship-list/ship-list.component.html
+++ b/src/Frontend/src/app/components/ship-list/ship-list.component.html
@@ -1,12 +1,19 @@
 <ul class="card-list-small">
-    <li *ngFor="let ship of shipList" class="ship-card-small">
-        <img *ngIf="ship.class === 'Small'" src="/assets/small.png">
-        <img *ngIf="ship.class === 'Medium'" src="/assets/medium.png">
-        <img *ngIf="ship.class === 'Large'" src="/assets/large.png">
-        <h3>{{ship.name}}</h3>
+    <li>
+        <a [routerLink]="'create'">
+            <div class="ship-card-small clearfix">
+                <img src="/assets/unknown.png">
+                <p class="h4">Create new</p>
+            </div>
+        </a>
     </li>
-    <li class="ship-card-small">
-        <img src="/assets/unknown.png">
-        <a [routerLink]="'create'">Create new ship</a><br/>
+    <li *ngFor="let ship of shipList">
+        <a [routerLink]="'detail/' + ship.id">
+            <div class="ship-card-small clearfix"><img *ngIf="ship.class === 'Small'" src="/assets/small.png">
+                <img *ngIf="ship.class === 'Medium'" src="/assets/medium.png">
+                <img *ngIf="ship.class === 'Large'" src="/assets/large.png">
+                <p class="h4">{{ship.name}}</p>
+            </div>
+        </a>
     </li>
 </ul>
